--- a/.github/workflows/check_css.yaml
+++ b/.github/workflows/check_css.yaml
@@ -24,4 +24,4 @@ jobs:
           npm install -g csslint
       - name: Run markdownlint
         run: |
-          csslint "**/*.css"
+          csslint assets/*.css
