--- a/.github/workflows/check_css.yaml
+++ b/.github/workflows/check_css.yaml
@@ -27,4 +27,6 @@ jobs:
           csslint --list-rules
       - name: Run csslint
         run: |
-          csslint assets/*.css
+          csslint \
+            --ignore=import-ie-limit,order-alphabetical \
+            assets/*.css
