fix: use correct cspell argument (#19)

--- a/.github/workflows/check_markdown.yaml
+++ b/.github/workflows/check_markdown.yaml
@@ -46,5 +46,5 @@ jobs:
         run: |
           cspell "**/*.md" \
             --config config/cspell.json \
-            --ignore "node_modules/**/*" \
-            --ignore "myenv/**/*"
+            --exclude "node_modules/**/*" \
+            --exclude "myenv/**/*"
