--- a/.github/workflows/check_css.yaml
+++ b/.github/workflows/check_css.yaml
@@ -1,10 +1,7 @@
 name: Check CSS
 
 on:
-  push:
-    branches: master
-  pull_request:
-    branches: master
+  workflow_call:
   workflow_dispatch:
 
 jobs:
