--- a/.github/workflows/html_check.yaml
+++ b/.github/workflows/html_check.yaml
@@ -9,20 +9,11 @@ jobs:
     name: Lint HTML code
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-      - name: Set up Python
-        uses: actions/setup-python@v6
+      - name: Download output artifact
+        uses: actions/download-artifact@v7
         with:
-          cache: pip
-          python-version: '3.14'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Build website
-        run: |
-          python src/rss_to_html.py
+          name: website_build_output
+          path: output
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
