--- a/.github/workflows/html_check.yaml
+++ b/.github/workflows/html_check.yaml
@@ -32,9 +32,11 @@ jobs:
               html-validate  \
                 --preset recommended \
                 --rule no-trailing-whitespace:warn \
-                --rule "wcag/h30:warn" \
+                --rule wcag/h30:warn \
                 output/security.html
             else
-              html-validate  "${file}"
+              html-validate  \
+                --rule wcag/h30:warn \
+                "${file}"
             fi
           done
