--- a/.github/workflows/html_check.yaml
+++ b/.github/workflows/html_check.yaml
@@ -32,11 +32,11 @@ jobs:
               html-validate  \
                 --preset recommended \
                 --rule element-permitted-content:warn \
-                --rule no-trailing-whitespace:warn \
                 --rule wcag/h30:off \
                 output/security.html
             else
               html-validate  \
+                --preset recommended \
                 --rule element-permitted-content:warn \
                 --rule wcag/h30:off \
                 "${file}"
